--- a/index.html
+++ b/index.html
@@ -120,30 +120,30 @@
                 )
                 tween.start()
             </script>
-        </section><div class="spacer layer1"></div>
-        <section class="col2" id="sec2">
+        </section><div class="spacer layer1">
+        </div><section class="col2" id="sec2">
             <h1>my header</h1>
             <p>Provident soluta laboriosam nulla quasi dolorum eligendi reiciendis harum facilis consectetur. Voluptatum
                 possimus, itaque cum fugiat placeat aperiam perspiciatis doloribus quaerat modi! Eum deserunt ex odit
                 quam
                 voluptates quos ipsum?</p>
-        </section><div class="spacer layer2"></div>
-        <section class="col3" id="sec3">
+        </section><div class="spacer layer2">
+        </div><section class="col3" id="sec3">
             <h1>my header</h1>
             <p>Exercitationem inventore sequi vel quo quasi? Reprehenderit impedit quas, illo quisquam voluptatibus,
                 soluta
                 quidem earum aut magni rem numquam consequatur asperiores distinctio quo blanditiis inventore hic
                 dolores
                 nesciunt suscipit. Ipsa?</p>
-        </section><div class="spacer layer3"></div>
-        <section class="col4" id="sec4">
+        </section><div class="spacer layer3">
+        </div><section class="col4" id="sec4">
             <h1>my header</h1>
             <p>Laboriosam dignissimos iste quis in. Quibusdam, ab soluta necessitatibus repellendus ducimus corrupti
                 laborum
                 nemo perferendis illo ex fugiat error, ipsa distinctio dolorem, iure dolore atque rerum ea? Vel, itaque?
                 Velit?</p>
-        </section><div class="spacer layer4"></div>
-        <section class="col5" id="sec5">
+        </section><div class="spacer layer4">
+        </div><section class="col5" id="sec5">
             <h3>Feel free to connect with me !!</h3>
             <div class="container">
                 <div class="contact-left">
