--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
 
     <main>
         <section class="col1" id="sec1">
-            <h1>my header</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit error aperiam odio enim hic voluptatem
-                quaerat
-                dolores animi placeat fugiat fuga quisquam cumque consequatur, sed maiores veritatis? Similique,
-                repellendus
-                temporibus?
-            </p>
+            <h1>Shidharth Routh</h1>
+            <h3>moving texts</h3>
+            <p>I have a M-tech degree in Geoinformatics and have experience in working with satellite images across 
+                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on scripting based platforms like MATLAB and python.</p>
+            <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed this portfolio.</p>
             <svg class="blob-motion" id="visual" viewBox="0 0 900 900" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
                 <g transform="translate(451.59512194833115 457.90768912031524)">
@@ -111,6 +109,7 @@
                     </path>
                 </g>
             </svg>
+            <p>Feel free to browse through my educational and career credentials.</p>
             <script>
                 const tween = KUTE.fromTo(
                     '#blob1',
