--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 
     <main>
         <section class="col1" id="sec1">
-            <h1>Shidharth Routh</h1>
-            <h3>moving texts</h3>
+            <h3>> <span class="typed-text"><span class="cursor"></span></h3><br>
             <p>I have a M-tech degree in Geoinformatics and have experience in working with satellite images across 
                 traditional platforms like Erdas Imagine, ArcMap and Qgis as well on scripting based platforms like MATLAB and python.</p>
             <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed this portfolio.</p>
@@ -187,7 +186,7 @@
             </div>
         </section>
     </main>
-
+    <script src="main.js"></script>
 </body>
 
 </html>
