--- a/index.html
+++ b/index.html
@@ -89,10 +89,20 @@
 
     <main>
         <section class="col1" id="sec1">
-            <h3>> <span class="typed-text"><span class="cursor"></span></h3><br>
-            <p>I have a M-tech degree in Geoinformatics and have experience in working with satellite images across 
-                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on scripting based platforms like MATLAB and python.</p>
-            <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed this portfolio.</p>
+            <div class="heading">
+                <h4>> <span class="typed-text"></h4>
+                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pen"
+                    class="cursor" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                    <path fill="currentColor"
+                        d="M497.9 74.16L437.8 14.06c-18.75-18.75-49.19-18.75-67.93 0l-56.53 56.55l127.1 128l56.56-56.55C516.7 123.3 516.7 92.91 497.9 74.16zM290.8 93.23l-259.7 259.7c-2.234 2.234-3.755 5.078-4.376 8.176l-26.34 131.7C-1.921 504 7.95 513.9 19.15 511.7l131.7-26.34c3.098-.6191 5.941-2.141 8.175-4.373l259.7-259.7L290.8 93.23z">
+                    </path>
+                </svg>
+            </div><br>
+            <p>I have a M-tech degree in Geoinformatics and have experience in working with satellite images across
+                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on scripting based platforms like
+                MATLAB and python.</p>
+            <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed
+                this portfolio.</p>
             <svg class="blob-motion" id="visual" viewBox="0 0 900 900" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
                 <g transform="translate(451.59512194833115 457.90768912031524)">
@@ -118,30 +128,38 @@
                 )
                 tween.start()
             </script>
-        </section><div class="spacer layer1">
-        </div><section class="col2" id="sec2">
+        </section>
+        <div class="spacer layer1">
+        </div>
+        <section class="col2" id="sec2">
             <h1>my header</h1>
             <p>Provident soluta laboriosam nulla quasi dolorum eligendi reiciendis harum facilis consectetur. Voluptatum
                 possimus, itaque cum fugiat placeat aperiam perspiciatis doloribus quaerat modi! Eum deserunt ex odit
                 quam
                 voluptates quos ipsum?</p>
-        </section><div class="spacer layer2">
-        </div><section class="col3" id="sec3">
+        </section>
+        <div class="spacer layer2">
+        </div>
+        <section class="col3" id="sec3">
             <h1>my header</h1>
             <p>Exercitationem inventore sequi vel quo quasi? Reprehenderit impedit quas, illo quisquam voluptatibus,
                 soluta
                 quidem earum aut magni rem numquam consequatur asperiores distinctio quo blanditiis inventore hic
                 dolores
                 nesciunt suscipit. Ipsa?</p>
-        </section><div class="spacer layer3">
-        </div><section class="col4" id="sec4">
+        </section>
+        <div class="spacer layer3">
+        </div>
+        <section class="col4" id="sec4">
             <h1>my header</h1>
             <p>Laboriosam dignissimos iste quis in. Quibusdam, ab soluta necessitatibus repellendus ducimus corrupti
                 laborum
                 nemo perferendis illo ex fugiat error, ipsa distinctio dolorem, iure dolore atque rerum ea? Vel, itaque?
                 Velit?</p>
-        </section><div class="spacer layer4">
-        </div><section class="col5" id="sec5">
+        </section>
+        <div class="spacer layer4">
+        </div>
+        <section class="col5" id="sec5">
             <h3>Feel free to connect with me !!</h3>
             <div class="container">
                 <div class="contact-left">
