--- a/index.html
+++ b/index.html
@@ -124,7 +124,36 @@
                     </path>
                 </g>
             </svg>
-            <p>Feel free to browse through my educational and career credentials.</p>
+            <p>Feel free to browse through my educational and career credentials.</p><br>
+
+            <div class="skills">
+                <div>
+                    <div class="skill-name soft"><span>softwares</span></div>
+                    <div class="software">
+                        <div><div><img src="softwares/arcmap.png"></div><span>esri arcmap</span></div>
+                        <div><div><img src="softwares/erdas.png"></div><span>erdas imagine</span></div>
+                        <div><div><img src="softwares/excel.png"></div><span>ms excel</span></div>
+                        <div><div><img src="softwares/word.png"></div><span>ms word</span></div>
+                        <div><div><img src="softwares/powerpoint.png"></div><span>ms powerpoint</span></div>
+                        <div><div><img src="softwares/vscode.png"></div><span>visual studio code</span></div>
+                        <div><div><img src="softwares/idrisi.jpg"></div><span>idrisi selva</span></div>
+                        <div><div><img src="softwares/fragstats.png"></div><span>fragstats</span></div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="skill-name lang"><span>languages</span></div>
+                    <div class="language">
+                        <div><div><img src="languages/matlab.png" ></div><span>matlab</span></div>
+                        <div><div><img src="languages/python.png" ></div><span>python</span></div>
+                        <div><div><img src="languages/c++.png" ></div><span>c++</span></div>
+                        <div><div><img src="languages/html.png" ></div><span>html</span></div>
+                        <div><div><img src="languages/css.png" ></div><span>css</span></div>
+                    </div>
+                </div>
+                
+            </div>
+
             <script>
                 const tween = KUTE.fromTo(
                     '#blob1',
