--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     </div>
                 </h1>
             </div><br>
-            <p>I have a M-tech degree in Geoinformatics and have experience in working with satellite images across
-                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on scripting based platforms like
-                MATLAB and python.</p>
+            <p>I have a M-tech degree in Geoinformatics and have experience in working with remotely sensed data i.e., satellite images across
+                traditional platforms like Erdas Imagine, ArcMap and Qgis as well on script based platforms like
+                MATLAB and python.</p><br>
             <p>I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed
                 this portfolio.</p>
             <svg class="blob-motion" id="visual" viewBox="0 0 900 900" xmlns="http://www.w3.org/2000/svg"
@@ -124,7 +124,8 @@
                     </path>
                 </g>
             </svg>
-            <p>Feel free to browse through my educational and career credentials.</p><br>
+            <p>Feel free to browse through my educational and career credentials.</p><br><br>
+            <p>Below is the list of software and languages I was able to learn and implement in projects I worked on.</p><br>
 
             <div class="skills">
                 <div>
@@ -152,8 +153,8 @@
                     </div>
                 </div>
                 
-            </div>
-
+            </div><br>
+            <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button" download><button>Download Resume</button></a></div>
             <script>
                 const tween = KUTE.fromTo(
                     '#blob1',
