--- a/index.html
+++ b/index.html
@@ -168,11 +168,38 @@
         <div class="spacer layer1">
         </div>
         <section class="col2" id="sec2">
-            <h1>my header</h1>
-            <p>Provident soluta laboriosam nulla quasi dolorum eligendi reiciendis harum facilis consectetur. Voluptatum
-                possimus, itaque cum fugiat placeat aperiam perspiciatis doloribus quaerat modi! Eum deserunt ex odit
-                quam
-                voluptates quos ipsum?</p>
+            <h1>Education</h1>
+            <p>Below are the details of my education from 10th standard to M-tech (P.G).</p>
+            <div class="wrapper">
+                <div class="edu" style="background-color: black;">
+                    <h3>AISSE (X)</h3>
+                    <h1>93.10%<h1>
+                    <p>from</p>
+                    <p>Kendriya Vidyalaya Garden Reach (C.B.S.E)</p>
+                </div>
+                <div class="edu" style="background-color: black;">
+                    <h3>AISSCE (XII)</h3>
+                    <h1>75.67%<h1>
+                    <p>from</p>
+                    <p>Kendriya Vidyalaya Garden Reach (C.B.S.E)</p>
+                </div>
+                <div class="edu" style="background-color: black;">
+                    <h3>B-Tech</h3>
+                    <h1>79.00%<h1>
+                    <p>in</p>
+                    <p>Civil Engineering</p>
+                    <p>from</p>
+                    <p>Haldia Institute of Technology (M.A.K.A.U.T / W.B.U.T)</p>
+                </div>
+                <div class="edu" style="background-color: black;">
+                    <h3>M-Tech</h3>
+                    <h1>84.22%<h1>
+                    <p>in</p>
+                    <p>Geoinformatics</p>
+                    <p>from</p>
+                    <p>Indian Institute of Engineering Science and Technology, Shibpur</p>
+                </div>
+            </div>
         </section>
         <div class="spacer layer2">
         </div>
