--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
         <div class="spacer layer1">
         </div>
         <section class="col2" id="sec2">
-            <h1>Education</h1>
-            <p>Below are the details of my education from 10th standard to M-tech (P.G).</p>
+            <h1>Education</h1><br>
+            <p>Below are the details of my education from 10th standard to M-tech (P.G).</p><br>
             <div class="wrapper">
                 <div class="edu" style="background-color: black;">
                     <h3>AISSE (X)</h3>
