--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
         <div class="spacer layer4">
         </div>
         <section class="col5" id="sec5">
-            <h3>Feel free to connect with me !!</h3>
+            <h3>Feel free to contact me !!</h3>
             <div class="container">
                 <div class="contact-left">
                     <h3>Send a Mail</h3>
-                    <form class="my-form" action="https://formsubmit.co/0c6e2c3080afc207421f5287933aed84" method="POST">
+                    <form class="my-form" action="https://formsubmit.co/sidrouth@gmail.com" method="POST">
                         <div class="details">
                             <div class="name s1">
                                 <label>Name : </label>
