--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             </div>
                             <div class="email s1">
                                 <label>E-mail : </label>
-                                <input type="email" placeholder="example@domain.com" name="email" class="form-control <?= $invalid_class_name ?? ""?> ">
+                                <input type="email" placeholder="example@domain.com" name="email" class="form-control">
                             </div>
                         </div>
                         <div class="content">
