--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 
     $message_sent = false;
     if(isset($_POST['email']) && $_POST['email'] != ' ') {
@@ -26,7 +26,7 @@
         }
     }
 
-?>
+?> -->
 
 
 <!DOCTYPE html>
