--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
         <section class="col5" id="sec5">
             <h1>Socials</h1><br>
-            <p>Feel free to follow or contact me.</p><br>
+            <p>Feel free to follow or contact me on :</p><br>
             <div class="socials">
                 <ul class="social-ul">
                     <div>
