--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                 </div>
 
             </div><br>
-            <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button" download><button>Download
-                        Resume</button></a></div>
+            <br><br><div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button" download><button>Resume</button></a></div>
             <script>
                 const tween = KUTE.fromTo(
                     '#blob1',
