--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
                 </div>
 
             </div><br>
-            <br><br><div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button" download><button>Resume</button></a></div>
+            <br><br>
+            <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button"
+                    download><button>Resume</button></a></div>
             <script>
                 const tween = KUTE.fromTo(
                     '#blob1',
@@ -230,12 +232,88 @@
         <div class="spacer layer2">
         </div>
         <section class="col3" id="sec3">
-            <h1>my header</h1>
-            <p>Exercitationem inventore sequi vel quo quasi? Reprehenderit impedit quas, illo quisquam voluptatibus,
-                soluta
-                quidem earum aut magni rem numquam consequatur asperiores distinctio quo blanditiis inventore hic
-                dolores
-                nesciunt suscipit. Ipsa?</p>
+            <h1>Project and Experience</h1><br>
+            <p>A brief description of the worked-on project titles and the software used in them. </p><br>
+            <div class="group-proj">
+
+                <div class="project pro1">
+                    <div class="pro-img">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="city"
+                            class="svg-inline--fa fa-city" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 640 512">
+                            <path fill="currentColor"
+                                d="M480 192H592C618.5 192 640 213.5 640 240V464C640 490.5 618.5 512 592 512H48C21.49 512 0 490.5 0 464V144C0 117.5 21.49 96 48 96H64V24C64 10.75 74.75 0 88 0C101.3 0 112 10.75 112 24V96H176V24C176 10.75 186.7 0 200 0C213.3 0 224 10.75 224 24V96H288V48C288 21.49 309.5 0 336 0H432C458.5 0 480 21.49 480 48V192zM576 368C576 359.2 568.8 352 560 352H528C519.2 352 512 359.2 512 368V400C512 408.8 519.2 416 528 416H560C568.8 416 576 408.8 576 400V368zM240 416C248.8 416 256 408.8 256 400V368C256 359.2 248.8 352 240 352H208C199.2 352 192 359.2 192 368V400C192 408.8 199.2 416 208 416H240zM128 368C128 359.2 120.8 352 112 352H80C71.16 352 64 359.2 64 368V400C64 408.8 71.16 416 80 416H112C120.8 416 128 408.8 128 400V368zM528 256C519.2 256 512 263.2 512 272V304C512 312.8 519.2 320 528 320H560C568.8 320 576 312.8 576 304V272C576 263.2 568.8 256 560 256H528zM256 176C256 167.2 248.8 160 240 160H208C199.2 160 192 167.2 192 176V208C192 216.8 199.2 224 208 224H240C248.8 224 256 216.8 256 208V176zM80 160C71.16 160 64 167.2 64 176V208C64 216.8 71.16 224 80 224H112C120.8 224 128 216.8 128 208V176C128 167.2 120.8 160 112 160H80zM256 272C256 263.2 248.8 256 240 256H208C199.2 256 192 263.2 192 272V304C192 312.8 199.2 320 208 320H240C248.8 320 256 312.8 256 304V272zM112 320C120.8 320 128 312.8 128 304V272C128 263.2 120.8 256 112 256H80C71.16 256 64 263.2 64 272V304C64 312.8 71.16 320 80 320H112zM416 272C416 263.2 408.8 256 400 256H368C359.2 256 352 263.2 352 272V304C352 312.8 359.2 320 368 320H400C408.8 320 416 312.8 416 304V272zM368 64C359.2 64 352 71.16 352 80V112C352 120.8 359.2 128 368 128H400C408.8 128 416 120.8 416 112V80C416 71.16 408.8 64 400 64H368zM416 176C416 167.2 408.8 160 400 160H368C359.2 160 352 167.2 352 176V208C352 216.8 359.2 224 368 224H400C408.8 224 416 216.8 416 208V176z">
+                            </path>
+                        </svg>
+                    </div><br>
+                    <div class="pro-cont">
+                        <h3>Modelling Urban Sprawl Dynamics of Howrah-Kolkata Urban Agglomeration
+                            by Semi-automated Impervious Feature Extraction Techniques using Multi-Sensor Remotely
+                            Sensed
+                            Data</h3><br>
+                        <h4>Junior Research Fellow</h4>
+                        <p>( Haldia Institute of Technology )</p><br>
+                        <h5>from July 2019 to October 2020 </h5><br>
+                        <p>Erdas Imagine and MATLAB was used to perform supervised classification and recoding on
+                            satellite images.
+                            ArcMap was used to perform accuracy assessment, preparation of classified images for further
+                            mathematical and layout generation.
+                            Idrisi Selva was used for predicting landuse patterns for upcoming years.
+                            Fragstats was used to calculate landuse metrics.
+                            Python and MATLAB was used for generating relevant plots.
+                        </p>
+                    </div>
+                </div>
+                <div class="project pro2">
+                    <div class="pro-img">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="cloud-sun-rain"
+                            class="svg-inline--fa fa-cloud-sun-rain" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 640 512">
+                            <path fill="currentColor"
+                                d="M255.7 139.1C244.8 125.5 227.6 116 208 116c-33.14 0-60 26.86-60 59.1c0 25.56 16.06 47.24 38.58 55.88C197.2 219.3 210.5 208.9 225.9 201.1C229.1 178.5 240.6 157.3 255.7 139.1zM120 175.1c0-48.6 39.4-87.1 88-87.1c27.8 0 52.29 13.14 68.42 33.27c21.24-15.67 47.22-25.3 75.58-25.3c.0098 0-.0098 0 0 0L300.4 83.58L286.9 8.637C285.9 3.346 281.3 .0003 276.5 .0003c-2.027 0-4.096 .5928-5.955 1.881l-62.57 43.42L145.4 1.882C143.6 .5925 141.5-.0003 139.5-.0003c-4.818 0-9.399 3.346-10.35 8.636l-13.54 74.95L40.64 97.13c-5.289 .9556-8.637 5.538-8.637 10.36c0 2.026 .5921 4.094 1.881 5.951l43.41 62.57L33.88 238.6C32.59 240.4 32 242.5 32 244.5c0 4.817 3.347 9.398 8.636 10.35l74.95 13.54l13.54 74.95c.9555 5.289 5.537 8.636 10.35 8.636c2.027 0 4.096-.5927 5.954-1.882l19.47-13.51c-3.16-10.34-4.934-21.28-4.934-32.64c0-17.17 4.031-33.57 11.14-48.32C141 241.7 120 211.4 120 175.1zM542.5 225.5c-6.875-37.25-39.25-65.5-78.51-65.5c-12.25 0-23.88 3-34.25 8c-17.5-24.13-45.63-40-77.76-40c-53 0-96.01 43-96.01 96c0 .5 .25 1.125 .25 1.625C219.6 232.1 191.1 265.2 191.1 303.1c0 44.25 35.75 80 80.01 80h256C572.2 383.1 608 348.2 608 303.1C608 264.7 579.7 232.2 542.5 225.5zM552 415.1c-7.753 0-15.35 3.752-19.97 10.69l-32 48c-2.731 4.093-4.037 8.719-4.037 13.29C496 501.4 506.9 512 520 512c7.75 0 15.36-3.75 19.98-10.69l32-48c2.731-4.093 4.037-8.719 4.037-13.29C576 426.6 565.1 415.1 552 415.1zM456 415.1c-7.751 0-15.34 3.752-19.98 10.69l-32 48c-2.731 4.093-4.037 8.719-4.037 13.29C400 501.4 410.9 512 423.1 512c7.75 0 15.36-3.75 19.98-10.69l32-48c2.731-4.093 4.037-8.719 4.037-13.29C480 426.6 469.1 415.1 456 415.1zM360 415.1c-7.753 0-15.34 3.752-19.97 10.69l-32 48c-2.731 4.093-4.037 8.719-4.037 13.29C304 501.4 314.9 512 327.1 512c7.75 0 15.36-3.75 19.99-10.69l32-48c2.731-4.093 4.037-8.719 4.037-13.29C384 426.6 373.1 415.1 360 415.1zM264 415.1c-7.756 0-15.35 3.752-19.97 10.69l-32 48c-2.731 4.093-4.037 8.719-4.037 13.29C208 501.4 218.9 512 231.1 512c7.75 0 15.36-3.75 19.98-10.69l32-48c2.731-4.093 4.037-8.719 4.037-13.29C288 426.6 277.1 415.1 264 415.1z">
+                            </path>
+                        </svg>
+                    </div><br>
+                    <div class="pro-cont">
+                        <h3>Comparative Spatio-Temporal Analysis of Satellite-derived ( GSMaP ) Rainfall and
+                            WRF Forecasted Rainfall on Hydrological Variability over India</h3><br>
+                        <h4>Trainee / M-Tech </h4>
+                        <p>( Space Applications Centre, Ahmedabad</p>
+                        <p>+</p>
+                        <p>Indian Institute of Engineering Science and Technology, Shibpur )</p><br>
+                        <h5>from July 2018 to April 2019 </h5><br>
+                        <p>NetCDF files were used in the analysis. Bash shell scripting was used to remap datasets to
+                            same basic units.
+                            MATLAB was used for analysis, implementation of bias correction algorithms, calculating
+                            comparative statistics between the datasets.
+                            Google's Earth Engine Code Editor was used for generating inundation map. ArcMap was used
+                            for layout generation.
+                        </p>
+                    </div>
+                </div>
+                <div class="project pro3">
+                    <div class="pro-img">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map"
+                            class="svg-inline--fa fa-map" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 576 512">
+                            <path fill="currentColor"
+                                d="M384 476.1L192 421.2V35.93L384 90.79V476.1zM416 88.37L543.1 37.53C558.9 31.23 576 42.84 576 59.82V394.6C576 404.4 570 413.2 560.9 416.9L416 474.8V88.37zM15.09 95.13L160 37.17V423.6L32.91 474.5C17.15 480.8 0 469.2 0 452.2V117.4C0 107.6 5.975 98.78 15.09 95.13V95.13z">
+                            </path>
+                        </svg>
+                    </div><br>
+                    <div class="pro-cont">
+                        <h3>3D Terrain Modelling of College (Haldia Institute of Technology ) Campus using Remote Sensing and GIS based approach</h3><br>
+                        <h4>B-Tech </h4>
+                        <p>( Haldia Institute of Technology )</p><br>
+                        <h5>from July 2016 to February 2017 </h5><br>
+                        <p>Google Earth was used to collect satellite images of the college campus. ArcMap was used for georeferencing, modelling of the campus and terrain,
+                            exporting files for visualization in Google Earth and for generating the final video of the modelled campus.
+                            Google Sketchup was used for cosmetic visualization of the campus.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
         </section>
         <div class="spacer layer3">
         </div>
