--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                             Python and MATLAB was used for generating relevant plots.
                         </p>
                     </div>
+                    <a class="more"></a>
                 </div>
                 <div class="project pro2">
                     <div class="pro-img">
@@ -287,17 +288,17 @@
                             MATLAB was used for analysis, implementation of bias correction algorithms, calculating
                             comparative statistics between the datasets.
                             Google's Earth Engine Code Editor was used for generating inundation map. ArcMap was used
-                            for layout generation.
-                        </p>
+                            for layout generation.</p>
                     </div>
+                    <a class="more"></a>
                 </div>
                 <div class="project pro3">
                     <div class="pro-img">
-                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="map"
-                            class="svg-inline--fa fa-map" role="img" xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 576 512">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="school"
+                            class="svg-inline--fa fa-school" role="img" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 640 512">
                             <path fill="currentColor"
-                                d="M384 476.1L192 421.2V35.93L384 90.79V476.1zM416 88.37L543.1 37.53C558.9 31.23 576 42.84 576 59.82V394.6C576 404.4 570 413.2 560.9 416.9L416 474.8V88.37zM15.09 95.13L160 37.17V423.6L32.91 474.5C17.15 480.8 0 469.2 0 452.2V117.4C0 107.6 5.975 98.78 15.09 95.13V95.13z">
+                                d="M320 128C328.8 128 336 135.2 336 144V160H352C360.8 160 368 167.2 368 176C368 184.8 360.8 192 352 192H320C311.2 192 304 184.8 304 176V144C304 135.2 311.2 128 320 128zM476.8 98.06L602.4 125.1C624.4 130.9 640 150.3 640 172.8V464C640 490.5 618.5 512 592 512H48C21.49 512 0 490.5 0 464V172.8C0 150.3 15.63 130.9 37.59 125.1L163.2 98.06L302.2 5.374C312.1-1.791 327-1.791 337.8 5.374L476.8 98.06zM256 512H384V416C384 380.7 355.3 352 320 352C284.7 352 256 380.7 256 416V512zM96 192C87.16 192 80 199.2 80 208V272C80 280.8 87.16 288 96 288H128C136.8 288 144 280.8 144 272V208C144 199.2 136.8 192 128 192H96zM496 272C496 280.8 503.2 288 512 288H544C552.8 288 560 280.8 560 272V208C560 199.2 552.8 192 544 192H512C503.2 192 496 199.2 496 208V272zM96 320C87.16 320 80 327.2 80 336V400C80 408.8 87.16 416 96 416H128C136.8 416 144 408.8 144 400V336C144 327.2 136.8 320 128 320H96zM496 400C496 408.8 503.2 416 512 416H544C552.8 416 560 408.8 560 400V336C560 327.2 552.8 320 544 320H512C503.2 320 496 327.2 496 336V400zM320 88C271.4 88 232 127.4 232 176C232 224.6 271.4 264 320 264C368.6 264 408 224.6 408 176C408 127.4 368.6 88 320 88z">
                             </path>
                         </svg>
                     </div><br>
@@ -308,9 +309,9 @@
                         <h5>from July 2016 to February 2017 </h5><br>
                         <p>Google Earth was used to collect satellite images of the college campus. ArcMap was used for georeferencing, modelling of the campus and terrain,
                             exporting files for visualization in Google Earth and for generating the final video of the modelled campus.
-                            Google Sketchup was used for cosmetic visualization of the campus.
-                        </p>
+                            Google Sketchup was used for cosmetic visualization of the campus.</p>
                     </div>
+                    <a class="more"></a>
                 </div>
 
             </div>
@@ -389,6 +390,14 @@
             </div>
         </section>
     </main>
+    <script>
+        let more = document.querySelectorAll('.more');
+        for(let i = 0; i < more.length;  i++) {
+            more[i].addEventListener('click', function() {
+                more[i].parentNode.classList.toggle('active')
+            })
+        }
+    </script>
     <script src="main.js"></script>
 </body>
 
