--- a/index.html
+++ b/index.html
@@ -89,6 +89,77 @@
 
     <main>
         <section class="col1" id="sec1">
+            <div class="intro">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <div class="intro-cont">
+                    <h1>I'm Shidharth Routh</h1><br>
+                    <p>I have a M-tech degree in Geoinformatics and have experience in working with remotely sensed data i.e.,
+                        satellite images across traditional platforms like Erdas Imagine, ArcMap and Qgis as well on script based platforms like
+                        MATLAB and python. I am a budding web developer with basic knowledge in Html and CSS with the help of which I have developed
+                        this webpage.</p>
+                </div>
+            </div><br>
+            <div class="skills">
+                <div>
+                    <div class="skill-name soft"><span>softwares</span></div>
+                    <div class="software">
+                        <div>
+                            <div><img src="softwares/arcmap.png"></div><span>esri arcmap</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/erdas.png"></div><span>erdas imagine</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/excel.png"></div><span>ms excel</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/word.png"></div><span>ms word</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/powerpoint.png"></div><span>ms powerpoint</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/vscode.png"></div><span>visual studio code</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/idrisi.jpg"></div><span>idrisi selva</span>
+                        </div>
+                        <div>
+                            <div><img src="softwares/fragstats.png"></div><span>fragstats</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="skill-name lang"><span>languages</span></div>
+                    <div class="language">
+                        <div>
+                            <div><img src="languages/matlab.png"></div><span>matlab</span>
+                        </div>
+                        <div>
+                            <div><img src="languages/python.png"></div><span>python</span>
+                        </div>
+                        <div>
+                            <div><img src="languages/c++.png"></div><span>c++</span>
+                        </div>
+                        <div>
+                            <div><img src="languages/html.png"></div><span>html</span>
+                        </div>
+                        <div>
+                            <div><img src="languages/css.png"></div><span>css</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div><br><br><br>
+            <div class="resume"><a href="waves/RESUME_SHIDHARTH_ROUTH.pdf" class="button"
+                    download><button>Resume</button></a>
+            </div>
+        </section>
+        <!-- <section class="col1" id="sec1">
             <div class="heading">
                 <h1>>&nbsp;
                     <div><span class="typed-text"></span></div>
@@ -192,7 +263,7 @@
                 )
                 tween.start()
             </script>
-        </section>
+        </section> -->
         <div class="spacer layer1">
         </div>
         <section class="col2" id="sec2">
